// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter renders with filters selected 1`] = `
<div
  className="RSFFilter-root-139"
>
  <div
    className="MuiPaper-root-161 MuiPaper-elevation1-164 MuiExpansionPanel-root-158 RSFExpandableSection-root-146 RSFExpandableSection-margins-147 RSFExpandableSection-expandedPanel-155"
  >
    <div
      aria-expanded={false}
      className="MuiButtonBase-root-194 MuiExpansionPanelSummary-root-188"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="MuiExpansionPanelSummary-content-192 RSFExpandableSection-summary-152"
      >
        <h6
          className="MuiTypography-root-197 MuiTypography-subtitle1-215"
        >
          Price
        </h6>
        <span
          className="MuiTypography-root-197 MuiTypography-caption-207 RSFExpandableSection-caption-148"
        >
          Up to $100
        </span>
      </div>
      <div
        aria-hidden="true"
        className="MuiButtonBase-root-194 MuiIconButton-root-232 MuiExpansionPanelSummary-expandIcon-193 RSFExpandableSection-summaryIconWrap-154"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={-1}
      >
        <span
          className="MuiIconButton-label-237"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-238 RSFExpandableSection-expandIcon-156"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-270"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      className="MuiCollapse-container-247"
      style={
        Object {
          "minHeight": "0px",
        }
      }
    >
      <div
        className="MuiCollapse-wrapper-249"
      >
        <div
          className="MuiCollapse-wrapperInner-250"
        >
          <div
            className="MuiExpansionPanelDetails-root-251 RSFExpandableSection-details-151"
          >
            <div
              className="MuiFormGroup-root-252"
            >
              <label
                className="MuiFormControlLabel-root-254"
              >
                <span
                  className="MuiButtonBase-root-194 MuiIconButton-root-232 MuiPrivateSwitchBase-root-266 MuiCheckbox-root-260 MuiCheckbox-colorPrimary-264 MuiPrivateSwitchBase-checked-267 MuiCheckbox-checked-261"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-237"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-238"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                    <input
                      checked={true}
                      className="MuiPrivateSwitchBase-input-269"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-270"
                  />
                </span>
                <span
                  className="MuiTypography-root-197 MuiTypography-body2-205 MuiFormControlLabel-label-259"
                >
                  <div
                    className="RSFFilter-groupLabel-145"
                  >
                    <span>
                      Up to $100
                    </span>
                    <span
                      className="MuiTypography-root-197 MuiTypography-caption-207 RSFFilter-matches-140"
                    >
                      (
                      20
                      )
                    </span>
                  </div>
                </span>
              </label>
              <label
                className="MuiFormControlLabel-root-254"
              >
                <span
                  className="MuiButtonBase-root-194 MuiIconButton-root-232 MuiPrivateSwitchBase-root-266 MuiCheckbox-root-260 MuiCheckbox-colorPrimary-264"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-237"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-238"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <input
                      checked={false}
                      className="MuiPrivateSwitchBase-input-269"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-270"
                  />
                </span>
                <span
                  className="MuiTypography-root-197 MuiTypography-body2-205 MuiFormControlLabel-label-259"
                >
                  <div
                    className="RSFFilter-groupLabel-145"
                  >
                    <span>
                      $100 - $200
                    </span>
                    <span
                      className="MuiTypography-root-197 MuiTypography-caption-207 RSFFilter-matches-140"
                    >
                      (
                      10
                      )
                    </span>
                  </div>
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiPaper-root-161 MuiPaper-elevation1-164 MuiExpansionPanel-root-158 RSFExpandableSection-root-146 RSFExpandableSection-margins-147 RSFExpandableSection-expandedPanel-155"
  >
    <div
      aria-expanded={false}
      className="MuiButtonBase-root-194 MuiExpansionPanelSummary-root-188"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="MuiExpansionPanelSummary-content-192 RSFExpandableSection-summary-152"
      >
        <h6
          className="MuiTypography-root-197 MuiTypography-subtitle1-215"
        >
          Color
        </h6>
        <span
          className="MuiTypography-root-197 MuiTypography-caption-207 RSFExpandableSection-caption-148"
        >
          Sunburst
        </span>
      </div>
      <div
        aria-hidden="true"
        className="MuiButtonBase-root-194 MuiIconButton-root-232 MuiExpansionPanelSummary-expandIcon-193 RSFExpandableSection-summaryIconWrap-154"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={-1}
      >
        <span
          className="MuiIconButton-label-237"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-238 RSFExpandableSection-expandIcon-156"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-270"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      className="MuiCollapse-container-247"
      style={
        Object {
          "minHeight": "0px",
        }
      }
    >
      <div
        className="MuiCollapse-wrapper-249"
      >
        <div
          className="MuiCollapse-wrapperInner-250"
        >
          <div
            className="MuiExpansionPanelDetails-root-251 RSFExpandableSection-details-151"
          >
            <div
              className="MuiFormGroup-root-252"
            >
              <label
                className="MuiFormControlLabel-root-254"
              >
                <span
                  className="MuiButtonBase-root-194 MuiIconButton-root-232 MuiPrivateSwitchBase-root-266 MuiCheckbox-root-260 MuiCheckbox-colorPrimary-264"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-237"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-238"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <input
                      checked={false}
                      className="MuiPrivateSwitchBase-input-269"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-270"
                  />
                </span>
                <span
                  className="MuiTypography-root-197 MuiTypography-body2-205 MuiFormControlLabel-label-259"
                >
                  <div
                    className="RSFFilter-groupLabel-145"
                  >
                    <span>
                      Red
                    </span>
                    <span
                      className="MuiTypography-root-197 MuiTypography-caption-207 RSFFilter-matches-140"
                    >
                      (
                      2
                      )
                    </span>
                  </div>
                </span>
              </label>
              <label
                className="MuiFormControlLabel-root-254"
              >
                <span
                  className="MuiButtonBase-root-194 MuiIconButton-root-232 MuiPrivateSwitchBase-root-266 MuiCheckbox-root-260 MuiCheckbox-colorPrimary-264 MuiPrivateSwitchBase-checked-267 MuiCheckbox-checked-261"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-237"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-238"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                    <input
                      checked={true}
                      className="MuiPrivateSwitchBase-input-269"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-270"
                  />
                </span>
                <span
                  className="MuiTypography-root-197 MuiTypography-body2-205 MuiFormControlLabel-label-259"
                >
                  <div
                    className="RSFFilter-groupLabel-145"
                  >
                    <span>
                      Sunburst
                    </span>
                    <span
                      className="MuiTypography-root-197 MuiTypography-caption-207 RSFFilter-matches-140"
                    >
                      (
                      10
                      )
                    </span>
                  </div>
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Filter renders with no filters selected 1`] = `
<div
  className="RSFFilter-root-1"
>
  <div
    className="MuiPaper-root-23 MuiPaper-elevation1-26 MuiExpansionPanel-root-20 RSFExpandableSection-root-8 RSFExpandableSection-margins-9 RSFExpandableSection-expandedPanel-17"
  >
    <div
      aria-expanded={false}
      className="MuiButtonBase-root-56 MuiExpansionPanelSummary-root-50"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="MuiExpansionPanelSummary-content-54 RSFExpandableSection-summary-14"
      >
        <h6
          className="MuiTypography-root-59 MuiTypography-subtitle1-77"
        >
          Price
        </h6>
      </div>
      <div
        aria-hidden="true"
        className="MuiButtonBase-root-56 MuiIconButton-root-94 MuiExpansionPanelSummary-expandIcon-55 RSFExpandableSection-summaryIconWrap-16"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={-1}
      >
        <span
          className="MuiIconButton-label-99"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-100 RSFExpandableSection-expandIcon-18"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-132"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      className="MuiCollapse-container-109"
      style={
        Object {
          "minHeight": "0px",
        }
      }
    >
      <div
        className="MuiCollapse-wrapper-111"
      >
        <div
          className="MuiCollapse-wrapperInner-112"
        >
          <div
            className="MuiExpansionPanelDetails-root-113 RSFExpandableSection-details-13"
          >
            <div
              className="MuiFormGroup-root-114"
            >
              <label
                className="MuiFormControlLabel-root-116"
              >
                <span
                  className="MuiButtonBase-root-56 MuiIconButton-root-94 MuiPrivateSwitchBase-root-128 MuiCheckbox-root-122 MuiCheckbox-colorPrimary-126"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-99"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-100"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <input
                      checked={false}
                      className="MuiPrivateSwitchBase-input-131"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-132"
                  />
                </span>
                <span
                  className="MuiTypography-root-59 MuiTypography-body2-67 MuiFormControlLabel-label-121"
                >
                  <div
                    className="RSFFilter-groupLabel-7"
                  >
                    <span>
                      Up to $100
                    </span>
                    <span
                      className="MuiTypography-root-59 MuiTypography-caption-69 RSFFilter-matches-2"
                    >
                      (
                      20
                      )
                    </span>
                  </div>
                </span>
              </label>
              <label
                className="MuiFormControlLabel-root-116"
              >
                <span
                  className="MuiButtonBase-root-56 MuiIconButton-root-94 MuiPrivateSwitchBase-root-128 MuiCheckbox-root-122 MuiCheckbox-colorPrimary-126"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-99"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-100"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <input
                      checked={false}
                      className="MuiPrivateSwitchBase-input-131"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-132"
                  />
                </span>
                <span
                  className="MuiTypography-root-59 MuiTypography-body2-67 MuiFormControlLabel-label-121"
                >
                  <div
                    className="RSFFilter-groupLabel-7"
                  >
                    <span>
                      $100 - $200
                    </span>
                    <span
                      className="MuiTypography-root-59 MuiTypography-caption-69 RSFFilter-matches-2"
                    >
                      (
                      10
                      )
                    </span>
                  </div>
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiPaper-root-23 MuiPaper-elevation1-26 MuiExpansionPanel-root-20 RSFExpandableSection-root-8 RSFExpandableSection-margins-9 RSFExpandableSection-expandedPanel-17"
  >
    <div
      aria-expanded={false}
      className="MuiButtonBase-root-56 MuiExpansionPanelSummary-root-50"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="MuiExpansionPanelSummary-content-54 RSFExpandableSection-summary-14"
      >
        <h6
          className="MuiTypography-root-59 MuiTypography-subtitle1-77"
        >
          Color
        </h6>
      </div>
      <div
        aria-hidden="true"
        className="MuiButtonBase-root-56 MuiIconButton-root-94 MuiExpansionPanelSummary-expandIcon-55 RSFExpandableSection-summaryIconWrap-16"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={-1}
      >
        <span
          className="MuiIconButton-label-99"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-100 RSFExpandableSection-expandIcon-18"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-132"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      className="MuiCollapse-container-109"
      style={
        Object {
          "minHeight": "0px",
        }
      }
    >
      <div
        className="MuiCollapse-wrapper-111"
      >
        <div
          className="MuiCollapse-wrapperInner-112"
        >
          <div
            className="MuiExpansionPanelDetails-root-113 RSFExpandableSection-details-13"
          >
            <div
              className="MuiFormGroup-root-114"
            >
              <label
                className="MuiFormControlLabel-root-116"
              >
                <span
                  className="MuiButtonBase-root-56 MuiIconButton-root-94 MuiPrivateSwitchBase-root-128 MuiCheckbox-root-122 MuiCheckbox-colorPrimary-126"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-99"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-100"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <input
                      checked={false}
                      className="MuiPrivateSwitchBase-input-131"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-132"
                  />
                </span>
                <span
                  className="MuiTypography-root-59 MuiTypography-body2-67 MuiFormControlLabel-label-121"
                >
                  <div
                    className="RSFFilter-groupLabel-7"
                  >
                    <span>
                      Red
                    </span>
                    <span
                      className="MuiTypography-root-59 MuiTypography-caption-69 RSFFilter-matches-2"
                    >
                      (
                      2
                      )
                    </span>
                  </div>
                </span>
              </label>
              <label
                className="MuiFormControlLabel-root-116"
              >
                <span
                  className="MuiButtonBase-root-56 MuiIconButton-root-94 MuiPrivateSwitchBase-root-128 MuiCheckbox-root-122 MuiCheckbox-colorPrimary-126"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-99"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-100"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <input
                      checked={false}
                      className="MuiPrivateSwitchBase-input-131"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-132"
                  />
                </span>
                <span
                  className="MuiTypography-root-59 MuiTypography-body2-67 MuiFormControlLabel-label-121"
                >
                  <div
                    className="RSFFilter-groupLabel-7"
                  >
                    <span>
                      Sunburst
                    </span>
                    <span
                      className="MuiTypography-root-59 MuiTypography-caption-69 RSFFilter-matches-2"
                    >
                      (
                      10
                      )
                    </span>
                  </div>
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
